--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/skin/color.css" />
-
+    <link rel="stylesheet" type="text/css" href="css/responsiveness.css">
     <link rel="stylesheet" type="text/css" class="alternate-style" title="color-1" href="css/skin/color-1.css" disabled>
     <link rel="stylesheet" type="text/css" class="alternate-style" title="color-2" href="css/skin/color-2.css" disabled>
     <link rel="stylesheet" type="text/css" class="alternate-style" title="color-3" href="css/skin/color-3.css" disabled>
