--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- navigation menu end -->
 
     <!-- Home section -->
-    <section class="home section section active" id="home">
+    <section class="home section active" id="home">
       <div class="effect-wrap">
         <div class="effect effect-1"></div>
         <div class="effect effect-2">
@@ -71,7 +71,7 @@
         <div class="home-text">
             <p>Hello</p>
             <h2>I'm AKorede Solomon</h2>
-            <h1>Backend Developer</h1>
+            <h1>Web Developer</h1>
             <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">About Me</a>
         </div>
         <div class="home-img">
@@ -106,7 +106,7 @@
             </div>
             <!-- Socical Link end -->
           </div>
-          <div class="about-info">
+          <div class="about-info info">
             <p><span>
            Hi!, I'm Akorede Solomon, A Backend  developer </span>working with standard based Javascript, Node.js, Express Js, next.Js, Relational Database(such as MysQL and Postgress)and Non-relatonal Database(such as Mongo DB). </p><p>I am a self motivated developer who likes to solve problems.</p> <p>
            I merge a passion for usability and user experience with technical knowledge to create cool digital experiences.</p>
