--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <link rel="stylesheet" type="text/css" href="css/style-switcher.css" />
   </head>
   <body>
+<section class="preloader">
+  <div class="box">
+    <div></div><div></div><div></div>
+  </div>
+</section>
+
     <!-- header beging -->
     <section id="header">
       <div class="container">
