--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
   </div>
 
   <h4>Theme Colors</h4>
-  <div class="colors">
+  <div class="color">
     <span class="color-1" onclick="setActiveStyle('color-1')"></span>
     <span class="color-2" onclick="setActiveStyle('color-2')"></span>
     <span class="color-3" onclick="setActiveStyle('color-3')"></span>
