--- a/index.html
+++ b/index.html
@@ -483,18 +483,18 @@
           <div class="row">
             <div class="w-50">
               <div class="input-group outer-shadow hover-in-shadow">
-                <input type="text" placeholder="Name" class="input-control">
+                <input type="text" placeholder="Name" class="input-control" id="name">
               </div>
               <div class="input-group outer-shadow hover-in-shadow">
-                <input type="text" placeholder="Email" class="input-control">
+                <input type="text" placeholder="Email" class="input-control" id="email">
                 </div>
                 <div class="input-group outer-shadow hover-in-shadow">
-                  <input type="text" placeholder="Subject" class="input-control">
+                  <input type="text" placeholder="Subject" class="input-control" id="subject">
               </div>
             </div>
             <div class="w-50">
               <div class="input-group outer-shadow hover-in-shadow">
-                <textarea class="input-control" placeholder="Message"></textarea>
+                <textarea class="input-control" placeholder="Message" id="message"></textarea>
               </div>
             </div>
           </div>
